:sparkles: feat: Reverse proxy with nginx

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,12 @@
+upstream springboot
+{
+    server lt-backend:8071  max_conns=10;
+}
+
 server {
     listen 80;
-    server_name localhost;
+    listen [::]:80;
+    server_name lt-manager.localhost;
 
     location / {
         root /usr/share/nginx/html/;
@@ -8,9 +14,8 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # TODO - REVERSE PROXY NAO FUNCIONANDO
     location /api/lt {
-        proxy_pass http://localhost:8071/;
+        proxy_pass http://springboot;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
